--- a/index.html
+++ b/index.html
@@ -165,6 +165,26 @@
       z-index: 2;
       transition: color 1s;
     }
+
+    /* Easter egg overlay */
+    #easter-egg {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0,0,0,0.85);
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+    #easter-egg img {
+      max-width: 80%;
+      max-height: 80%;
+      border-radius: 8px;
+      box-shadow: 0 0 20px var(--primary);
+    }
   </style>
 </head>
 <body>
@@ -197,6 +217,11 @@
   </div>
 
   <footer>&copy; 2025 Lucid. All rights reserved.</footer>
+
+  <!-- Easter egg hidden image -->
+  <div id="easter-egg">
+    <img src="easteregg.png" alt="Easter Egg">
+  </div>
 
   <script>
     // Dropdown toggle
@@ -270,9 +295,32 @@
       const scrollHint = document.getElementById('scrollHint');
       scrollHint.style.opacity = scroll > 100 ? "0" : "1";
     });
+
+    // Easter egg logic
+    const secretWord = "lucid"; // <-- change this to your secret word
+    let typed = "";
+
+    document.addEventListener("keydown", (e) => {
+      typed += e.key.toLowerCase();
+
+      if (typed.length > secretWord.length) {
+        typed = typed.slice(-secretWord.length);
+      }
+
+      if (typed === secretWord) {
+        showEasterEgg();
+        typed = "";
+      }
+    });
+
+    function showEasterEgg() {
+      const egg = document.getElementById("easter-egg");
+      egg.style.display = "flex";
+
+      setTimeout(() => {
+        egg.style.display = "none";
+      }, 2000); // visible for 2 seconds
+    }
   </script>
 </body>
 </html>
-
-
-
