--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     });
 
     // Easter egg logic
-    const secretWord = "lucid"; // <-- change this to your secret word
+    const secretWord = "femboy"; // <-- change this to your secret word
     let typed = "";
 
     document.addEventListener("keydown", (e) => {
@@ -324,3 +324,4 @@
   </script>
 </body>
 </html>
+
