--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <div class="container">
     <header>
       <h1>Lucid</h1>
-      <p>Special thanks to Burt Cocaine and klazo all my homies hate lenny</p>
+      <p>Special thanks to Burt Cocaine and klazo all my homies hate lenny parsonage</p>
       <div class="scroll-hint" id="scrollHint">▼ SCROLL ▼</div>
     </header>
 
@@ -324,5 +324,6 @@
   </script>
 </body>
 </html>
+
 
 
