--- a/klazo/index.html
+++ b/klazo/index.html
@@ -133,7 +133,7 @@
       <div class="dropdown">
         <div class="dropdown-btn">Socials &#x25BC;</div>
         <div class="dropdown-content">
-          <a href="https://steamcommunity.com/id/FentNeedIe/">Steam</a>
+          <a href="https://Penis.com">Peen pics</a>
           <a href="#">Example</a>
           <a href="#">Example</a>
         </div>
